Fix previous commit - each cell in page, same size
Previous code did not make all of the columns flex containers
Meaning that the cells didn't shrink and thus the grid did not fit
within the webpage
Now a grid of any size fits within the webpage

--- a/styles.css
+++ b/styles.css
@@ -11,23 +11,12 @@ body {
 }
 
 .container > * {
-    flex-shrink: 1;
-    flex-basis: 100%;
-}
-
-.col1,
-.col2,
-.col3,
-.col4 {
     display: flex;
     flex-direction: column;
     flex: 1;
 }
 
-.col1 > *,
-.col2 > *,
-.col3 > *,
-.col4 > * {
+.container > * > * {
     flex-shrink: 1;
     flex-basis: 100%;
 }
